--- a/ranking/history
+++ b/ranking/history
@@ -1,8 +1,20 @@
 [
     [
         "jeff_wu0302",
+        "A",
+        1643,
+        100.0
+    ],
+    [
+        "jeff_wu0302",
         "B",
         3056,
         32.0
+    ],
+    [
+        "jeff_wu0302",
+        "B",
+        3124,
+        36.0
     ]
 ]
