fixed team name

--- a/ranking/history
+++ b/ranking/history
@@ -1,18 +1,18 @@
 [
     [
-        "jeff_wu0302",
+        "team08",
         "A",
         1643,
         100.0
     ],
     [
-        "jeff_wu0302",
+        "team08",
         "B",
         3056,
         32.0
     ],
     [
-        "jeff_wu0302",
+        "team08",
         "B",
         3124,
         36.0
