--- a/ranking/history
+++ b/ranking/history
@@ -16,5 +16,11 @@
         "B",
         3124,
         36.0
+    ],
+    [
+        "team08",
+        "K1",
+        7578,
+        100.0
     ]
 ]
