--- a/ranking/history
+++ b/ranking/history
@@ -184,5 +184,35 @@
         "K1",
         6971,
         20.0
+    ],
+    [
+        "I Need Sleep",
+        "K1",
+        7457,
+        20.0
+    ],
+    [
+        "Stiff",
+        "H2",
+        7477,
+        10.0
+    ],
+    [
+        "na",
+        "K1",
+        7539,
+        20.0
+    ],
+    [
+        "Ill byte you",
+        "H1",
+        8042,
+        20.0
+    ],
+    [
+        "Sorry were late.(1)",
+        "H1",
+        8356,
+        10.0
     ]
 ]
